test/inputs/positive/bench_unrealizable_count_lt85e515.sl
(set-logic LIA)
(synth-fun c0 () Int ((Ix Int) (Ic Int))
 ((Ix Int (Ic (- Ix) (+ Ix Ix))) (Ic Int ((Constant Int)))))
(declare-var a Int)
(declare-var i Int)
(declare-var i1 Int)
(constraint (or (not (not (< i a))) (= i1 c0)))
(check-synth)
